<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activities.SchoolDetailsActivity">

    <ImageView
        android:id="@+id/schoolIv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/school_nameTv"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/school_nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/school_name"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/writingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/writingPreface"
        app:layout_constraintTop_toBottomOf="@+id/readingTV" />

    <TextView
        android:id="@+id/tTakersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tTakersPreface"
        app:layout_constraintTop_toBottomOf="@+id/schoolIv" />

    <TextView
        android:id="@+id/mathTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="38dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/mathPreface"
        app:layout_constraintTop_toBottomOf="@+id/tTakersTV" />

    <TextView
        android:id="@+id/readingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/sample_number"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/readingPreface"
        app:layout_constraintTop_toBottomOf="@+id/mathTV" />

    <TextView
        android:id="@+id/tTakersPreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/tt_preface"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolIv" />

    <TextView
        android:id="@+id/mathPreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/average_math_score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tTakersPreface" />

    <TextView
        android:id="@+id/writingPreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/average_writing_score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/readingPreface" />

    <TextView
        android:id="@+id/readingPreface"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/average_reading_score"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mathPreface" />

</androidx.constraintlayout.widget.ConstraintLayout>